--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   provider: ^6.0.3
   http: ^0.13.5
   html: ^0.15.0
+  flutter_spinkit: ^5.1.0
 
 dev_dependencies:
   flutter_test:
