--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,8 +62,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
-    - images/dummy_thumbnail.jpeg
+#  assets:
+#    - images/dummy_thumbnail.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
