--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,14 +30,9 @@ dependencies:
   flutter:
     sdk: flutter
 
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
   provider: ^6.0.3
   http: ^0.13.5
   html: ^0.15.0
-  flutter_spinkit: ^5.1.0
 
 dev_dependencies:
   flutter_test:
@@ -62,8 +57,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-#  assets:
-#    - images/dummy_thumbnail.jpeg
+  assets:
+    - images/horni_rolling_eyes.gif
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
