--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/horni_rolling_eyes.gif
+    - images/picdump_thumbnail_placeholder.jpeg
+    - images/empty_horni.png
+    - images/horni.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
